scotia-peru-aks/viya/sas-bases/overlays/openshift-no-cert-utils-operator-transformers/route-full-tls-no-cert-utils-operator.yaml
##
##
## Full-stack TLS with Customer-Provided OpenShift Ingress Certificates without the use of the cert-utils-operator
##
##
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-route-full-tls-transformer-no-cert-utils-operator
patch: |-
  - op: replace
    path: /spec/tls
    value:
      termination: reencrypt
      insecureEdgeTerminationPolicy: Redirect
      key: PLACEHOLDER
      certificate: PLACEHOLDER
      caCertificate: PLACEHOLDER
      destinationCACertificate: PLACEHOLDER
  - op: remove
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1certs-from-secret
  - op: remove
    path: /metadata/annotations/cert-utils-operator.redhat-cop.io~1destinationCA-from-secret
target:
  kind: Route
